# loop-engineering-anything

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING-demos.md  README.md  loop-engineering-anything-idea.md  pyproject.toml
demos/: README.md  RESULT_SCHEMA.json  SCHEMA.json  arxiv.yaml  automate-your-job.yaml  biotech-discovery.yaml  biotech-drug-sim.yaml  clinical-trial-protocol.yaml  clinical-trials.yaml  edu-curriculum.yaml  factcli.yaml  hackernews.yaml  legal-compliance.yaml  one-person-industrial-engine.yaml  pr-lifecycle.yaml  quant-macro-portfolio.yaml  quant-macro.yaml  smart-grid-dispatch.yaml  smart-grid.yaml  software-arch.yaml  supply-chain-reroute.yaml  supply-chain.yaml  vc-angel.yaml  wikipedia.yaml
docs/: e2e-runbook.md
marketing/: PATTERN.md  README.md  dogfood-log.md  linkedin-launch.md  show-hn.md  taglines.md  x-thread.md
scripts/: changelog.sh  doc-sync-prepush.sh
tests/: test_adapter_judge.py  test_adapters_factory.py  test_adopt.py  test_autonomous_runner.py  test_bindings.py  test_checkpoint.py  test_compound_engineering.py  test_compression.py  test_connectors.py  test_contracts_generalization.py  test_convergence.py  test_demo_cli.py  test_demo_manifest.py  test_domain_protocol.py  test_domain_registry.py  test_fleet_cli.py  test_fleet_coordinator.py  test_fleet_escalation.py  test_fleet_routing.py  test_fleet_runner.py  test_fleet_spec.py  test_fleet_state.py  test_flywheel_ablation.py  test_flywheel_live_wiring.py  test_fork_card.py  test_judge_variance.py  test_llm_refiner.py  test_loop_controller.py  test_maker_checker.py  (+18 more)
(+165 files in other folders)
