[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering-anything"
version = "0.1.0"
description = "A loop orchestrator that turns any target into a self-improving, agent-native CLI by driving generate -> judge -> refactor -> re-judge to convergence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wjlgatech" }]
dependencies = [
    "click>=8.1",
    "pyyaml>=6",
    "jsonschema>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
loop-anything = "loopeng.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
loopeng = ["memory/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
